feat(android): install dictionaries from shared URLs and file managers
- share a dictionary URL from any browser or app to wuDict to download and
install it automatically
- probe and sniff for companion files: `.js`, `.css` `.mdd` and
`.files.zip` etc
- install via file tap or Share on `.mdx`, `.slob`, `.bgl`, `.zim` `.dsl` + `.zip` and `.7z` from Android file managers
- Styler: Custom styles: fix App CSS persistence
